// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Modal > renders open custom size 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  />
</DocumentFragment>
`;

exports[`Modal > renders open custom size and width (size take predecence) 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  />
</DocumentFragment>
`;

exports[`Modal > renders open custom width 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  />
</DocumentFragment>
`;

exports[`Modal > renders with custom classNames 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  />
</DocumentFragment>
`;

exports[`Modal > renders with customStyle 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  />
</DocumentFragment>
`;

exports[`Modal > renders with default Props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls=":r0:"
      aria-haspopup="dialog"
      type="button"
    >
      Test
    </button>
  </div>
</DocumentFragment>
`;

exports[`Modal > renders with default Props and function children 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  />
</DocumentFragment>
`;

exports[`Modal > renders with default Props and function children open 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  />
</DocumentFragment>
`;

exports[`Modal > renders with disclosure 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="modal-test"
      aria-haspopup="dialog"
      type="button"
    >
      Test
    </button>
  </div>
</DocumentFragment>
`;

exports[`Modal > renders with disclosure and onBeforeClose 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="modal-test"
      aria-haspopup="dialog"
      type="button"
    >
      Open modal
    </button>
  </div>
</DocumentFragment>
`;

exports[`Modal > renders with disclosure and onClose 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="modal-test"
      aria-haspopup="dialog"
      type="button"
    >
      Open modal
    </button>
  </div>
  @keyframes animation-0 {
  0% {
    -webkit-transform: translateY(+100%);
    -moz-transform: translateY(+100%);
    -ms-transform: translateY(+100%);
    transform: translateY(+100%);
  }

  100% {
    -webkit-transform: translateY(0%);
    -moz-transform: translateY(0%);
    -ms-transform: translateY(0%);
    transform: translateY(0%);
  }
}

@keyframes animation-0 {
  0% {
    -webkit-transform: translateY(+100%);
    -moz-transform: translateY(+100%);
    -ms-transform: translateY(+100%);
    transform: translateY(+100%);
  }

  100% {
    -webkit-transform: translateY(0%);
    -moz-transform: translateY(0%);
    -ms-transform: translateY(0%);
    transform: translateY(0%);
  }
}

@keyframes animation-0 {
  0% {
    -webkit-transform: translateY(+100%);
    -moz-transform: translateY(+100%);
    -ms-transform: translateY(+100%);
    transform: translateY(+100%);
  }

  100% {
    -webkit-transform: translateY(0%);
    -moz-transform: translateY(0%);
    -ms-transform: translateY(0%);
    transform: translateY(0%);
  }
}

.emotion-0 {
  position: fixed;
  top: 0;
  right: 0;
  height: 0;
  width: 0;
  overflow: hidden;
  background-color: #464959a6;
  z-index: 1;
  opacity: 0;
}

.emotion-0[data-open='true'] {
  padding: 16px;
  overflow: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  bottom: 0;
  left: 0;
  height: 100%;
  width: 100%;
}

.emotion-0[data-visible='true'] {
  opacity: 1;
}

.emotion-0[data-animation] {
  overflow: hidden;
}

.emotion-0 {
  position: fixed;
  top: 0;
  right: 0;
  height: 0;
  width: 0;
  overflow: hidden;
  background-color: #464959a6;
  z-index: 1;
  opacity: 0;
}

.emotion-0[data-open='true'] {
  padding: 16px;
  overflow: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  bottom: 0;
  left: 0;
  height: 100%;
  width: 100%;
}

.emotion-0[data-visible='true'] {
  opacity: 1;
}

.emotion-0[data-animation] {
  overflow: hidden;
}

.emotion-2 {
  background-color: #ffffff;
  position: relative;
  border-radius: 4px;
  border: 0;
  padding: 24px;
  width: 708px;
  box-shadow: 0px 12px 24px 0px #2226383d,0px 8px 60px 0px #22263852;
  -webkit-transition: width 0.3s ease-in-out,-webkit-transform 0.3s ease-in-out;
  transition: width 0.3s ease-in-out,transform 0.3s ease-in-out;
}

.emotion-2[data-size="large"] {
  width: 850px;
}

.emotion-2[data-size="medium"] {
  width: 708px;
}

.emotion-2[data-size="small"] {
  width: 616px;
}

.emotion-2[data-size="xsmall"] {
  width: 400px;
}

.emotion-2[data-size="xxsmall"] {
  width: 360px;
}

.emotion-2[data-placement="bottom"] {
  margin: auto;
  margin-bottom: 0;
}

.emotion-2[data-placement="bottom-left"] {
  margin: auto;
  margin-left: 0;
  margin-bottom: 0;
}

.emotion-2[data-placement="bottom-right"] {
  margin: auto;
  margin-right: 0;
  margin-bottom: 0;
}

.emotion-2[data-placement="center"] {
  margin: auto;
}

.emotion-2[data-placement="left"] {
  margin: auto;
  margin-left: 0;
}

.emotion-2[data-placement="right"] {
  margin: auto;
  margin-right: 0;
}

.emotion-2[data-placement="top"] {
  margin: auto;
  margin-top: 0px;
}

.emotion-2[data-placement="top-left"] {
  margin: auto;
  margin-left: 0;
  margin-top: 0;
}

.emotion-2[data-placement="top-right"] {
  margin: auto;
  margin-right: 0;
  margin-top: 0;
}

.emotion-2[data-animation='true'] {
  -webkit-animation: animation-0 0.3s ease-in-out forwards;
  animation: animation-0 0.3s ease-in-out forwards;
}

.emotion-2 {
  background-color: #ffffff;
  position: relative;
  border-radius: 4px;
  border: 0;
  padding: 24px;
  width: 708px;
  box-shadow: 0px 12px 24px 0px #2226383d,0px 8px 60px 0px #22263852;
  -webkit-transition: width 0.3s ease-in-out,-webkit-transform 0.3s ease-in-out;
  transition: width 0.3s ease-in-out,transform 0.3s ease-in-out;
}

.emotion-2[data-size="large"] {
  width: 850px;
}

.emotion-2[data-size="medium"] {
  width: 708px;
}

.emotion-2[data-size="small"] {
  width: 616px;
}

.emotion-2[data-size="xsmall"] {
  width: 400px;
}

.emotion-2[data-size="xxsmall"] {
  width: 360px;
}

.emotion-2[data-placement="bottom"] {
  margin: auto;
  margin-bottom: 0;
}

.emotion-2[data-placement="bottom-left"] {
  margin: auto;
  margin-left: 0;
  margin-bottom: 0;
}

.emotion-2[data-placement="bottom-right"] {
  margin: auto;
  margin-right: 0;
  margin-bottom: 0;
}

.emotion-2[data-placement="center"] {
  margin: auto;
}

.emotion-2[data-placement="left"] {
  margin: auto;
  margin-left: 0;
}

.emotion-2[data-placement="right"] {
  margin: auto;
  margin-right: 0;
}

.emotion-2[data-placement="top"] {
  margin: auto;
  margin-top: 0px;
}

.emotion-2[data-placement="top-left"] {
  margin: auto;
  margin-left: 0;
  margin-top: 0;
}

.emotion-2[data-placement="top-right"] {
  margin: auto;
  margin-right: 0;
  margin-top: 0;
}

.emotion-2[data-animation='true'] {
  -webkit-animation: animation-0 0.3s ease-in-out forwards;
  animation: animation-0 0.3s ease-in-out forwards;
}

.emotion-4 {
  position: absolute;
  top: 16px;
  right: 16px;
}

.emotion-4 {
  position: absolute;
  top: 16px;
  right: 16px;
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.emotion-6:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-6:hover,
.emotion-6:active {
  background: #e9eaeb;
  color: #222638;
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.emotion-6:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-6:hover,
.emotion-6:active {
  background: #e9eaeb;
  color: #222638;
}

.emotion-8 {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-8 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-8 {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-8 .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div>
    <div
      class="emotion-0 emotion-1"
      data-animation="false"
      data-open="true"
      data-testid="test-backdrop"
      data-visible="true"
      id="backdrop-modal"
    >
      <dialog
        aria-label="modal-test"
        aria-modal="true"
        class="emotion-2 emotion-3"
        data-animation="false"
        data-placement="center"
        data-size="small"
        data-testid="test"
        id="modal-test"
        open=""
        tabindex="0"
      >
        <div>
          modal
        </div>
        <div
          class="emotion-4 emotion-5"
        >
          <button
            aria-label="close"
            class="emotion-6 emotion-7"
            data-testid="test-close-button"
            type="button"
          >
            <svg
              class="emotion-8 emotion-9"
              viewBox="0 0 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
              />
            </svg>
          </button>
        </div>
      </dialog>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal > renders with open={true} 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  />
</DocumentFragment>
`;

exports[`Modal > renders with open={true} and no close icon 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  />
</DocumentFragment>
`;

exports[`Modal > renders without disclosure 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  />
</DocumentFragment>
`;
